tinyc/test/bad/enum-shadowed-vla.c
enum {
    size = 10,
};

int main()
{
    int size = 12;
    int arr[ size ];

    return 0;
}
